# boilerplate4cpp

./: CMakeLists.txt  README.md  test
src/tests/: tests-main.cpp
